tests/baselines/reference/classStaticBlock23.errors.txt
tests/cases/conformance/classes/classStaticBlock/classStaticBlock23.ts(5,9): error TS18038: 'For await' loops cannot be used inside a class static block.
tests/cases/conformance/classes/classStaticBlock/classStaticBlock23.ts(14,11): error TS18038: 'For await' loops cannot be used inside a class static block.


==== tests/cases/conformance/classes/classStaticBlock/classStaticBlock23.ts (2 errors) ====
    const nums = [1, 2, 3].map(n => Promise.resolve(n))
    
    class C {
      static {
        for await (const nn of nums) {
            ~~~~~
!!! error TS18038: 'For await' loops cannot be used inside a class static block.
            console.log(nn)
        }
      }
    }
    
    async function foo () {
      class C {
        static {
          for await (const nn of nums) {
              ~~~~~
!!! error TS18038: 'For await' loops cannot be used inside a class static block.
              console.log(nn)
          }
        }
      }
    }